--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libpcap"]
 	path = libpcap
-	url = https://github.com/the-tcpdump-group/libpcap.git
+	url = https://git.sailfishos.org/mirror/libpcap.git
